--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ ul {
     }
 
     & a:visited {
-        color:#000;
+        color: #000;
     }
 }
 
@@ -86,12 +86,6 @@ img {
 video {
     display: block;
     margin: auto;
-}
-
-/*Social media icons*/
-.fa {
-    text-decoration: none;
-    color: #000;
 }
 
 /*Skiplink is hidden on mobile*/
@@ -166,6 +160,31 @@ article {
 
 footer {
     border-top: 2px solid #695616;
+    display: grid;
+    grid-template-areas: "logo socialmedia"
+        "logo tagline";
+
+    & picture.left {
+        padding: 4%;
+        grid-area: logo;
+        place-self: center start;
+
+    }
+
+    & p.right {
+        grid-area: socialmedia;
+
+        /*Social media icons*/
+        .fa {
+            text-decoration: none;
+            color: #000;
+        }
+    }
+
+    & p.center {
+        grid-area: tagline;
+        place-self: start start;
+    }
 }
 
 /*Image gallery-thing for products*/
