moved image slideshow to index-page and added complete list on allproducts instead

--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,10 @@ article {
         text-align: center;
     }
 
+    & h3 {
+        text-align: center;
+    }
+
     & picture {
         display: block;
         margin: 0 17%;
